revert changes to  mobile word wrap issue in code demo output

--- a/src/styles/CodeDemo.css
+++ b/src/styles/CodeDemo.css
@@ -30,7 +30,7 @@
 }
 
 .code-demo__body__code-field p{
-    min-width: 22rem;
+    min-width: 25rem;
     margin: 0rem;
     line-height: 1.5rem;
     overflow-x: auto;
