--- a/src/styles/code.css
+++ b/src/styles/code.css
@@ -17,7 +17,7 @@
 
 .code{
     font-family: monospace;
-    font-size: 0.85rem;
+    font-size: 0.9rem;
 }
 
 .code-background{
